--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,12 +1,18 @@
 .navbar{
     width: 100%;
+    height: 70px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: #fff;
     padding: 15px 7%;
-    transition: 0.5s;
+    transition: 0.2s;
+    background: rgba(255, 255, 255, 0.6);
+        backdrop-filter: blur(12px);
+        -webkit-backdrop-filter: blur(12px);
+    
+        border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
+
 .logo{
     width: 160px;
     cursor: pointer;
@@ -28,7 +34,79 @@ li{
     cursor: pointer;
     margin-left: 40px;
 }
-.dark .navbar{
+.dark .navbar {
+    background-color: #000;
+    /* navy-dark glass */
+    color: #ffffff;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.15);
+}
+.lang-select {
+    padding: 6px 10px;
+    border-radius: 6px;
+    cursor: pointer;
+    margin-left: 20px;
+}
+.lang-btn {
+    padding: 6px 14px;
+    border-radius: 6px;
+    border: none;
+    cursor: pointer;
+    font-size: 14px;
+    margin-left: 20px;
+    transition: 0.3s;
+}
+
+/* Light mode */
+.lang-btn {
     background: #000;
     color: #fff;
+}
+
+/* Dark mode */
+.dark .lang-btn {
+    background: #fff;
+    color: #000;
+}
+/* Language dropdown */
+
+/* Dark mode dropdown */
+.dark .lang-select {
+    background: #fff;
+    color: #000;
+}
+
+/* Hamburger icon */
+.menu-icon {
+    display: none;
+    font-size: 26px;
+    cursor: pointer;
+}
+
+/* Mobile styles */
+@media (max-width: 768px) {
+    ul {
+        display: none;
+        position: absolute;
+        top: 70px;
+        right: 7%;
+        background: inherit;
+        width: 200px;
+        padding: 20px;
+        text-align: left;
+        border-radius: 10px;
+    }
+
+    ul.open {
+        display: block;
+    }
+
+    li {
+        display: block;
+        margin: 15px 0;
+    }
+
+    .menu-icon {
+        display: block;
+        margin-left: 20px;
+    }
 }
