--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -11,8 +11,14 @@
         -webkit-backdrop-filter: blur(12px);
     
         border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    position: sticky;
+        top: 0;
+        z-index: 1000;
+    }
+.navbar a {
+    text-decoration: none;
+    color: inherit;
 }
-
 .logo{
     width: 160px;
     cursor: pointer;
